--- a/exercise midterm web/index.html
+++ b/exercise midterm web/index.html
@@ -24,7 +24,7 @@
     <img src="/images/bear1.jpg" alt="a bear saying hi">
     </div>
     <div class="article">
-        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque unde ea quos repellendus quasi error necessitatibus architecto quia tenetur odit explicabo, reiciendis sint, fugit illo, doloribus et quo officia deserunt?</p>
+        <p> Lorem pipsum dolor, sit amet consectetur adipisicing elit. Doloremque unde ea quos repellendus quasi error necessitatibus architecto quia tenetur odit explicabo, reiciendis sint, fugit illo, doloribus et quo officia deserunt?</p>
         <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque unde ea quos repellendus quasi error necessitatibus architecto quia tenetur odit explicabo, reiciendis sint, fugit illo, doloribus et quo officia deserunt?</p>
         <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque unde ea quos repellendus quasi error necessitatibus architecto quia tenetur odit explicabo, reiciendis sint, fugit illo, doloribus et quo officia deserunt?</p>
         <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque unde ea quos repellendus quasi error necessitatibus architecto quia tenetur odit explicabo, reiciendis sint, fugit illo, doloribus et quo officia deserunt?</p>
